--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="canonical" href="https://deephull.netlify.app/">
   <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" href="/index-pgpn7qvg.css">
+  <link rel="stylesheet" href="/design-system.css">
   <script type="module" src="/index-bdrpnltx.js"></script>
   <script type="application/ld+json">{
  "@context":"https://schema.org",
