--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </section>
 
   <!-- Services Section -->
-  <section id="services" class="py-20 bg-navy-900 relative">
+  <section id="services" class="section-padding bg-navy-900 relative">
     <div class="container mx-auto px-4">
       <div class="text-center mb-16">
         <h2 class="text-5xl font-bold text-pearl-white mb-4">Our Services</h2>
@@ -150,7 +150,7 @@
   </section>
 
   <!-- About Section -->
-  <section id="about" class="py-20 gradient-navy-aqua relative">
+  <section id="about" class="section-padding gradient-navy-aqua relative">
     <div class="container mx-auto px-4">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
         <div class="animate-slideInRight">
@@ -209,7 +209,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-20 bg-navy-950 relative">
+  <section id="contact" class="section-padding bg-navy-950 relative">
     <div class="container mx-auto px-4">
       <div class="text-center mb-16">
         <h2 class="text-5xl font-bold text-pearl-white mb-4">Get In Touch</h2>
@@ -285,7 +285,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="gradient-navy-aqua py-12 border-t border-aqua-500/20">
+  <footer class="gradient-navy-aqua section-padding border-t border-aqua-500/20">
     <div class="container mx-auto px-4">
       <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
         <div>
